--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -2422,7 +2422,7 @@ b.B {
         // border: 1px solid #cbcbcb;
         box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
         border-radius: 1em;
-        border: solid 1px #bf0000;
+        border: solid 2px #bf0000;
         margin: 1em 0;
         padding-bottom: 2em;
         overflow: hidden;
@@ -2474,11 +2474,14 @@ b.B {
         background: linear-gradient(to left in oklab, oklch(0.51 0.21 29.53) 0%, #f1401c 100%);
         color: #fff;
         padding: .5em 1.5em;
-        text-align: right;
+        text-align: center;
+        font-weight: bold;
+        font-size: 1.125em;
     }
     .ID_info{
         display:flex;
         justify-content: space-between;
+        align-items: flex-start;
         padding: 2.2em 1.5em 1em;
         .foto{
             flex: 0 0 40%;
@@ -2513,6 +2516,16 @@ b.B {
                 background: url(../images/icon/icon_user.svg) 10px 50% no-repeat;
                 background-size: 36px 36px;
             }
+            .note{
+                display: block;
+                padding: .25em 1em;
+                color: #bf0000;
+                border: 1px solid #bf0000;
+                text-align: center;
+                font-weight: bold;
+                border-radius: 2em;
+                margin: 0 .75em;
+            }
             ul{
                 font-size: 112.5%;
                 li{
@@ -2536,6 +2549,11 @@ b.B {
         .state{
             background: #eee;
             color: #333;
+        }
+        .note{
+            color: #222;
+            background: #eee;
+            border: 1px solid #eee;
         }
         .foto{
             span{
