--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -2471,7 +2471,7 @@ b.B {
 
     .state{
         // background: #bf0000;
-        background: linear-gradient(to left in oklab, oklch(0.51 0.21 29.53) 0%, #f1401c 100%);
+        background-image: linear-gradient(to right, #de3a1a 0%, #c40500 100%);
         color: #fff;
         padding: .5em 1.5em;
         text-align: right;
@@ -2488,9 +2488,9 @@ b.B {
             position: relative;
             background: red;
             line-height: 0;
-            img{
-                height: 100%;
-            }
+            // img{
+            //     height: 100%;
+            // }
             span{
                 position: absolute;
                 width: 160px;
