--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -1701,6 +1701,7 @@ $duration: 1.4s;
 }
 
 p a,
+span a,
 li a,
 b,
 b.R,
@@ -1914,6 +1915,10 @@ b.B {
                         color: #666;
                         line-height: 1.3;
                         padding-top: 6px;
+                        a:first-child,
+                        b:first-child{
+                            padding-left: 0;
+                        }
                     }
                 }
             }
@@ -2576,9 +2581,14 @@ b.B {
             flex-flow: row wrap;
             justify-content: space-between;
             .btn{
-                flex: 1 1 50%;
-                max-width: 49%;
+                flex: 1 1 32%;
+                max-width: 32%;
                 padding: .5em !important;
+
+                &._stretch{
+                    flex: 1 1 100%;
+                    max-width: 100%;
+                }
             }
         }
     }
