新增按鈕 btn-normal3

--- a/css/PDF.css
+++ b/css/PDF.css
@@ -1594,6 +1594,10 @@ br {
   background: #00d1c6;
   cursor: pointer;
 }
+.btn-submit:hover {
+  background: #b48801 !important;
+  border: 1px solid #9a7401;
+}
 
 .btn-submit2 {
   background: #ff8409;
@@ -1710,6 +1714,18 @@ br {
 .btn-normal2:hover, .btn-normal2:focus {
   color: #fff !important;
   background: #474747 !important;
+  border: solid 1px #acacac !important;
+}
+
+.btn-normal3 {
+  color: #fff !important;
+  background: #474747 !important;
+  border: solid 1px #acacac !important;
+  text-shadow: none !important;
+}
+.btn-normal3:hover, .btn-normal3:focus {
+  color: #474747 !important;
+  background: #fff !important;
   border: solid 1px #acacac !important;
 }
 
