--- a/css/boca_personal.css
+++ b/css/boca_personal.css
@@ -1770,6 +1770,10 @@ kbd kbd {
   background: #9d6948;
   cursor: pointer;
 }
+.btn-submit:hover {
+  background: #f52f04 !important;
+  border: 1px solid #dc2b04;
+}
 
 .btn-submit2 {
   background: #ff8409;
@@ -1886,6 +1890,18 @@ kbd kbd {
 .btn-normal2:hover, .btn-normal2:focus {
   color: #fff !important;
   background: #474747 !important;
+  border: solid 1px #acacac !important;
+}
+
+.btn-normal3 {
+  color: #fff !important;
+  background: #474747 !important;
+  border: solid 1px #acacac !important;
+  text-shadow: none !important;
+}
+.btn-normal3:hover, .btn-normal3:focus {
+  color: #474747 !important;
+  background: #fff !important;
   border: solid 1px #acacac !important;
 }
 
@@ -12021,6 +12037,7 @@ h1.title, h2.title {
   .Login .control_panle .col .login_title .btn_grp,
   .Login .control_panle .col .pin_panel .btn_grp {
     flex-wrap: wrap;
+    margin-top: 1em;
   }
   .Login .control_panle .col .login_title .btn_grp button,
   .Login .control_panle .col .pin_panel .btn_grp button {
